kubernetes/bootstrap/cilium/gateways/external-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external-gateway
  namespace: kube-system
  labels:
    cilium.io/gateway: "true"
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: 192.168.5.14
  listeners:
    - name: external-gw
      protocol: HTTP
      port: 80
      hostname: "*.mcmumf.dev"
      allowedRoutes:
        namespaces:
          from: All
